--- a/flask_app/vercel.json
+++ b/flask_app/vercel.json
@@ -1,3 +1,3 @@
 {
-   "rewrites":[{"source": "/(.*)","destination" : "/index.py"}]
+   "rewrites":[{"source": "/(.*)","destination" : "/app.py"}]
 }
