--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,3 @@
 {
-   "rewrites":[{"source": "/(.*)","destination" : "/base.html"}]
+   "rewrites":[{"source": "/(.*)","destination" : "/user_app.py"}]
 }
