--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,25 @@
-flask == 1.1.4
-dash == 2.6.0
-gunicorn
-numpy
-nltk
-markupsafe==2.0.1
-torch == 1.13.1
-flask_cors == 2.0.1
+certifi==2023.7.22
+charset-normalizer==3.2.0
+filelock==3.12.2
+idna==3.4
+Jinja2==3.1.2
+joblib==1.3.2
+MarkupSafe==2.1.3
+mpmath==1.3.0
+networkx==3.1
+numpy==1.25.2
+panda==0.3.1
+pandas==2.0.3
+python-dateutil==2.8.2
+pytz==2023.3
+requests==2.31.0
+scikit-learn==1.3.0
+scipy==1.11.2
+six==1.16.0
+sklearn==0.0.post7
+sympy==1.12
+threadpoolctl==3.2.0
+torch==2.0.1
+typing_extensions==4.7.1
+tzdata==2023.3
+urllib3==2.0.4
